docs: finished working on header

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -10,16 +10,32 @@
 <body>
     <header>
         <div class="container">
-            <nav class="nav">
-              <ul class="nav-list">
-                <li class="nav-item"><a href="#contacts" class="nav-link"><h1>Cozy House</h1>Shelter for pets in boston</a></li>
-                <li class="nav-item"><a href="#about" class="nav-link">About the shelter</a></li>
-                <li class="nav-item"><a href="#skills" class="nav-link">Our pets</a></li>
-                <li class="nav-item"><a href="#code" class="nav-link">Help the shelter</a></li>
-                <li class="nav-item"><a href="#education_projects" class="nav-link">Contacts</a></li>
-              </ul>
-            </nav>
+            <div class="logo"><h1>Cozy House</h1><p class="subtitle">Shelter for pets in Boston</p></div>
+            <div class="navbar">
+              <p class="about-item">About the shelter</p>
+              <p class="nav-item"><a href="#pets" class="nav-link">Our pets</a>
+              <p class="nav-item"><a href="#help" class="nav-link">Help the shelter</a></p>
+              <p class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></p>
+            </div>
+            
+        </div>
+      <div class="start-screen">
+        <div class="start-screen-content">
+          <div class="heading">
+            <h2>Not only people need a house</h2>
           </div>
+          <p class="subheading">
+              We offer to give a chance to a little and nice puppy with an extremely wide and open heart. 
+              He or she will love you more than anybody else in the world, you will see!
+          </p>
+          <div class="button">
+            <p class="button-text">Make a friend</p>
+          </div>
+        </div>
+        <div class="puppy-image">
+          <img src="./assets/img/puppy.png">
+        </div>
+      </div>
     </header>
 </body>
 </html>
