docs: add about and pets blocks

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -32,10 +32,94 @@
             <p class="button-text">Make a friend</p>
           </div>
         </div>
-        <div class="puppy-image">
+        <div>
           <img src="./assets/img/puppy.png">
         </div>
       </div>
     </header>
+    <div class="about">
+      <div class="about-content">
+        <img src="./assets/img/pets.png">
+        <div class="about-shelter">
+          <h3>About the shelter “Cozy House”</h3>
+          <p class="about-subheading">
+            Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. 
+            The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
+          </p>
+          <p class="about-subheading" id="about-subheading">
+            We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. 
+            We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. 
+            Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="pets">
+      <div class="pets-content">
+        <div class="pets-title">
+          <h3 id="pets-title-text">
+            Our friends who <p class="pets-title-text-second">are looking for a house</p>
+          </h3>
+        </div>
+        <div class="pets-slider">
+          <div class="buttor-arrow">
+            <svg class="arrow" width="14" height="6" viewBox="0 0 14 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M14 2V4H3V6L0 3L3 0V2H14Z" fill="#292929"/>
+            </svg>            
+          </div>
+          <div class="pet-cards">
+            <div class="pet-card">
+              <div class="pet-img">
+                <img src="./assets/img/cat1.png">
+              </div>
+              <div class="pet-name">
+                <p>Katrine</p>
+              </div>
+              <div class="button" id="pets-button">
+                <p class="button-text">Learn more</p>
+              </div>
+            </div>
+            <div class="pet-card" id="pet-card2">
+              <div class="pet-img">
+                <img src="./assets/img/dog1.png">
+              </div>
+              <div class="pet-name">
+                <p>Jennifer</p>
+              </div>
+              <div class="button" id="pets-button">
+                <p class="button-text">Learn more</p>
+              </div>
+            </div>
+            <div class="pet-card" id="pet-card3">
+              <div class="pet-img">
+                <img src="./assets/img/dog2.png">
+              </div>
+              <div class="pet-name">
+                <p>Woody</p>
+              </div>
+              <div class="button" id="pets-button">
+                <p class="button-text">Learn more</p>
+              </div>
+          </div>
+        </div>
+        <div class="buttor-arrow" id="right-button">
+          <svg class="arrow" width="14" height="6" viewBox="0 0 14 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0 4V2L11 2V0L14 3L11 6V4L0 4Z" fill="#292929"/>
+            </svg>                  
+        </div>
+      </div>
+      <div class="button-pets">
+        <p class="button-pets-text">Get to know the rest</p>
+      </div>
+    </div>
+    <div class="help">
+      <div class="help-content">
+        <div class="help-title">
+          <h3 id="help-title-text">
+            How you can help<p class="help-title-text-second">our shelter</p>
+          </h3>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
