fix: fix validation errors

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -39,7 +39,7 @@
     </header>
     <div class="about">
       <div class="about-content">
-        <img src="./assets/img/pets.png">
+        <img src="./assets/img/about_pets.png" alt="about pets">
         <div class="about-shelter">
           <h3>About the shelter “Cozy House”</h3>
           <p class="about-subheading">
@@ -58,7 +58,7 @@
       <div class="pets-content">
         <div class="pets-title">
           <h3 id="pets-title-text">
-            Our friends who <p class="pets-title-text-second">are looking for a house</p>
+            Our friends who<br> are looking for a house
           </h3>
         </div>
         <div class="pets-slider">
@@ -70,7 +70,7 @@
           <div class="pet-cards">
             <div class="pet-card">
               <div class="pet-img">
-                <img src="./assets/img/cat1.png">
+                <img src="./assets/img/card_cat_1.png" alt="card cat 1">
               </div>
               <div class="pet-name">
                 <p>Katrine</p>
@@ -81,7 +81,7 @@
             </div>
             <div class="pet-card" id="pet-card2">
               <div class="pet-img">
-                <img src="./assets/img/dog1.png">
+                <img src="./assets/img/card_dog_1.png" alt="card dog 1">
               </div>
               <div class="pet-name">
                 <p>Jennifer</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="pet-card" id="pet-card3">
               <div class="pet-img">
-                <img src="./assets/img/dog2.png">
+                <img src="./assets/img/card_dog_2.png" alt="card dog 2">
               </div>
               <div class="pet-name">
                 <p>Woody</p>
@@ -117,7 +117,7 @@
       <div class="help-content">
         <div class="help-title">
           <h3 id="help-title-text">
-            How you can help<p class="help-title-text-second">our shelter</p>
+            How you can help <br>our shelter
           </h3>
         </div>
         <div class="help-list">
