--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo"><a class="logo-link" href="./main.html"><h1>Cozy House</h1><p class="subtitle">Shelter for pets in Boston</p></a></div>
+            <div class="logo"><a class="logo-link" href="./index.html"><h1>Cozy House</h1><p class="subtitle">Shelter for pets in Boston</p></a></div>
               <div class="navbar">
-                <p class="nav-item"><a href="./main.html" class="nav-link">About the shelter</a></p>
+                <p class="nav-item"><a href="./index.html" class="nav-link">About the shelter</a></p>
                 <p class="inactive-item">Our pets</p>
-                <p class="nav-item"><a href="./main.html#help" class="nav-link">Help the shelter</a></p>
+                <p class="nav-item"><a href="./index.html#help" class="nav-link">Help the shelter</a></p>
                 <p class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></p>
               </div>
           </div>
