doc: add adaptive layout on header block

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -7,11 +7,16 @@
     <title>main</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="icon" href="./assets/img/favicon.png">
+    <meta name="viewport" content="width=device-width">
 </head>
 <body>
     <header>
         <div class="container">
-          <div class="logo"><a class="logo-link" href="#!"><h1>Cozy House</h1><p class="subtitle">Shelter for pets in Boston</p></a></div>
+          <div class="logo">
+            <a class="logo-link" href="#!"><h1>Cozy House</h1>
+              <p class="subtitle">Shelter for pets in Boston</p>
+            </a>
+          </div>
             <div class="navbar">
               <p class="about-item">About the shelter</p>
               <p class="nav-item"><a href="./pets.html" class="nav-link">Our pets</a></p>
@@ -33,8 +38,8 @@
             <p class="button-text">Make a friend</p>
           </a>
         </div>
-        <div>
-          <img src="./assets/img/puppy_header.png" alt="puppy header">
+        <div class="puppy-block">
+          <img class="puppy-header" src="./assets/img/puppy_header.png" alt="puppy header">
         </div>
       </div>
     </header>
