doc: add adaptive layout on donation and footer blocks

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -226,8 +226,8 @@
             </svg>
             <a class="card-link" href="#!"><h4 id="card-number">8380 2880 8028 8791 7435</h4></a>
           </div>
-          <div class="legal-info">
-            <p>
+          <div>
+            <p class="legal-info">
               Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. 
               Maecenas a ipsum at libero sagittis dignissim sed ac diam. 
               Praesent ultrices maximus tortor et vulputate. 
