--- a/shelter/index.html
+++ b/shelter/index.html
@@ -22,6 +22,13 @@
               <p class="nav-item"><a href="./pets.html" class="nav-link">Our pets</a></p>
               <p class="nav-item"><a href="#help" class="nav-link">Help the shelter</a></p>
               <p class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></p>
+              <div class="burger">
+                <svg width="30" height="22" viewBox="0 0 30 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <line y1="21" x2="30" y2="21" stroke="#F1CDB3" stroke-width="2"/>
+                  <line y1="11" x2="30" y2="11" stroke="#F1CDB3" stroke-width="2"/>
+                  <line y1="1" x2="30" y2="1" stroke="#F1CDB3" stroke-width="2"/>
+                  </svg>                  
+              </div>
             </div>
             
         </div>
@@ -45,7 +52,7 @@
     </header>
     <div class="about">
       <div class="about-content">
-        <img src="./assets/img/about_pets.png" alt="about pets">
+        <img class="pets-puppy" src="./assets/img/about_pets.png" alt="about pets">
         <div class="about-shelter">
           <h3>About the shelter “Cozy House”</h3>
           <p class="about-subheading">
@@ -68,7 +75,7 @@
           </h3>
         </div>
         <div class="pets-slider">
-          <div class="button-arrow">
+          <div class="button-arrow" id="left-button">
             <svg class="arrow" width="14" height="6" viewBox="0 0 14 6" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M14 2V4H3V6L0 3L3 0V2H14Z" fill="#292929"/>
             </svg>            
