fix: button link error

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="button-pets">
-        <p class="button-pets-text">Get to know the rest</p>
+        <a class="pets-link" href="./pets.html"><p class="button-pets-text">Get to know the rest</p></a>
       </div>
     </div>
   </div>
