--- a/shelter/index.html
+++ b/shelter/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main</title>
     <link rel="stylesheet" href="./css/main.css">
+    <script defer src="./js/index.js"></script>
     <link rel="icon" href="./assets/img/favicon.png">
     <meta name="viewport" content="width=device-width">
 </head>
@@ -23,11 +24,20 @@
               <p class="nav-item"><a href="#help" class="nav-link">Help the shelter</a></p>
               <p class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></p>
               <div class="burger">
-                <svg width="30" height="22" viewBox="0 0 30 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <line y1="21" x2="30" y2="21" stroke="#F1CDB3" stroke-width="2"/>
-                  <line y1="11" x2="30" y2="11" stroke="#F1CDB3" stroke-width="2"/>
-                  <line y1="1" x2="30" y2="1" stroke="#F1CDB3" stroke-width="2"/>
-                  </svg>                  
+                <div class="burger-button">
+                  <div class="burger-button-line"></div>
+                  <div class="burger-button-line" id="burger-button-line-2"></div>
+                  <div class="burger-button-line" id="burger-button-line-3"></div>
+                </div>
+                <div class="burger-content">
+                  <div class="burger-navbar">
+                    <p class="about-item-burger">About the shelter</p>
+                    <p class="nav-item-burger" id="nav-item-burger-1"><a href="./pets.html" class="nav-link">Our pets</a></p>
+                    <p class="nav-item-burger" id="nav-item-burger-2"><a href="#help" class="nav-link">Help the shelter</a></p>
+                    <p class="nav-item-burger" id="nav-item-burger-3"><a href="#contacts" class="nav-link">Contacts</a></p>
+                  </div>
+                </div>
+                <div class="burger-overlay"></div>
               </div>
             </div>
             
