doc: add burger menu on pets page

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="burger-content">
                   <div class="burger-navbar">
-                    <p class="about-item-burger">About the shelter</p>
+                    <p class="inactive-item-burger">About the shelter</p>
                     <p class="nav-item-burger" id="nav-item-burger-1"><a href="./pets.html" class="nav-link">Our pets</a></p>
                     <p class="nav-item-burger" id="nav-item-burger-2"><a href="#help" class="nav-link">Help the shelter</a></p>
                     <p class="nav-item-burger" id="nav-item-burger-3"><a href="#contacts" class="nav-link">Contacts</a></p>
