--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -48,7 +48,7 @@
         <div class="cards-container">
             <div class="pet-card">
                 <div class="pet-img">
-                  <img src="./assets/img/card_cat_1.png" alt="card cat 1">
+                  <img src="./assets/img/Katrine.png" alt="Katrine">
                 </div>
                 <div class="pet-name">
                   <p>Katrine</p>
@@ -59,7 +59,7 @@
             </div>
             <div class="pet-card-margin">
                 <div class="pet-img">
-                  <img src="./assets/img/card_dog_1.png" alt="card dog 1">
+                  <img src="./assets/img/Jennifer.png" alt="Jennifer">
                 </div>
                 <div class="pet-name">
                   <p>Jennifer</p>
@@ -70,7 +70,7 @@
               </div>
             <div class="pet-card-margin">
                 <div class="pet-img">
-                  <img src="./assets/img/card_dog_2.png" alt="card dog 2">
+                  <img src="./assets/img/Woody.png" alt="Woody">
                 </div>
                 <div class="pet-name">
                   <p>Woody</p>
@@ -81,7 +81,7 @@
             </div>
             <div class="pet-card-margin">
                 <div class="pet-img">
-                  <img class="pet-img-big" src="./assets/img/card_dog_3.png" alt="card dog 3">
+                  <img class="pet-img-big" src="./assets/img/Sophia.png" alt="Sophia">
                 </div>
                 <div class="pet-name">
                   <p>Sophia</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="pet-card">
                 <div class="pet-img">
-                  <img src="./assets/img/card_cat_2.png" alt="card cat 2">
+                  <img src="./assets/img/Timmy.png" alt="Timmy">
                 </div>
                 <div class="pet-name">
                   <p>Timmy</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="pet-card-margin">
                 <div class="pet-img">
-                  <img src="./assets/img/card_dog_4.png" alt="card dog 4">
+                  <img src="./assets/img/Charly.png" alt="Charly">
                 </div>
                 <div class="pet-name">
                   <p>Charly</p>
@@ -114,7 +114,7 @@
             </div>
             <div class="pet-card-margin">
                 <div class="pet-img">
-                  <img src="./assets/img/card_dog_5.png" alt="card dog 5">
+                  <img src="./assets/img/Scarlett.png" alt="Scarlett">
                 </div>
                 <div class="pet-name">
                   <p>Scarlett</p>
@@ -125,7 +125,7 @@
             </div>
             <div class="pet-card-margin">
                 <div class="pet-img">
-                  <img src="./assets/img/card_cat_3.png" alt="card cat 3">
+                  <img src="./assets/img/Freddie.png" alt="Freddie">
                 </div>
                 <div class="pet-name">
                   <p>Freddie</p>
