--- a/shelter/index.html
+++ b/shelter/index.html
@@ -90,6 +90,37 @@
               <path d="M14 2V4H3V6L0 3L3 0V2H14Z" fill="#292929"/>
             </svg>            
           </div>
+          <div class="popup-overlay"></div>
+        <div class="popup">
+          <div class="close-button">
+            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M7.42618 6.00003L11.7046 1.72158C12.0985 1.32775 12.0985 0.689213 11.7046 0.295433C11.3108 -0.0984027 10.6723 -0.0984027 10.2785 0.295433L5.99998 4.57394L1.72148 0.295377C1.32765 -0.098459 0.68917 -0.098459 0.295334 0.295377C-0.0984448 0.689213 -0.0984448 1.32775 0.295334 1.72153L4.57383 5.99997L0.295334 10.2785C-0.0984448 10.6723 -0.0984448 11.3108 0.295334 11.7046C0.68917 12.0985 1.32765 12.0985 1.72148 11.7046L5.99998 7.42612L10.2785 11.7046C10.6723 12.0985 11.3108 12.0985 11.7046 11.7046C12.0985 11.3108 12.0985 10.6723 11.7046 10.2785L7.42618 6.00003Z" fill="#292929"/>
+              </svg>          
+          </div>
+          <div class="popup-card">
+            <img class="popup-pet-picture" src="./assets/img/Jennifer.png" alt="Jennifer">
+            <div class="popup-card-content">
+              <div class="popup-logo">
+                <h3 class="popup-logo-title">Jennifer</h3>
+                <p class="popup-logo-subtitle">Dog - Labrador</p>
+              </div>
+              <div class="popup-description">
+                <p class="popup-description-text">
+                Jennifer is a sweet 2 months old Labrador that is patiently waiting to find a new forever home. 
+                This girl really enjoys being able to go outside to run and play, but won't hesitate to play up a storm in the house if she has all of her favorite toys.
+                </p>
+            </div>
+            <div class="popup-list">
+              <ul>
+                <li><h5><b>Age:</b> 2 months</h5></li>
+                <li><h5><b>Inoculations:</b> none</h5</li>
+                <li><h5><b>Diseases:</b> none</h5></li>
+                <li><h5><b>Parasites:</b> none</h5></li>
+              </ul>  
+            </div>
+            </div>
+          </div>
+        </div>
             <div class="carousel" id="carousel">
               <div class="pets-slider">
                 <div class="pet-cards-left">
