feat: add buttons functional

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -9,8 +9,11 @@
     <script defer src="index.js"></script>
 </head>
 <body>
+    <p class="artist-name"></p>
+    <p class="song-name"></p>
+    <P class="song-number"></P>
     <div class="audio-player">
-        <audio class="audio" src="./assets/audio/beyonce.mp3">
+        <audio class="audio" src="">
         </audio>
     <div class="bar">
         <div class="progress-bar"></div>
@@ -23,11 +26,11 @@
         </div>
         <div class="stop"><img src="./assets/svg/pause.png" alt="pause" id="stop-button"></div>
     </div>
-    <div class="backward-button" alt="backward">
-        <img src="./assets/svg/backward.png">
+    <div class="backward-button">
+        <img src="./assets/svg/backward.png" alt="backward">
     </div>
-    <div class="forward-button" alt="forward">
-        <img src="./assets/svg/forward.png">
+    <div class="forward-button">
+        <img src="./assets/svg/forward.png" alt="forward">
     </div>    
     </div>
 </body>
