--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Player</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="index.js"></script>
 </head>
 
@@ -17,11 +17,11 @@
         <p class="artist-name"></p>
         <p class="song-name"></p>
         <P class="song-number"></P>
-        <audio class="audio" src=""></audio>
+        <audio class="audio">
         </audio>
         <div class="duration">0:00</div>
         <div id="controls">
-            <input type="range" id="track-slider" min="0" max="100" value="0">
+            <input type="range" class="track-slider" min="0" max="100" value="0">
         </div>
         <div class="timer">0:00</div>
         <div class="buttons">
@@ -37,8 +37,16 @@
             <div class="forward-button">
                 <img src="./assets/svg/forward.png" alt="forward" id="forward">
             </div>
+            <img src="./assets/img/vol1.png" alt="vlome-down" id="vlome-down">
+            <input type="range" class="volume" min="0" max="1" step="0.01" value="0.5">
+            <img src="./assets/img/vol2.png" alt="vlome-up" id="vlome-up">
         </div>
     </div>
+    <footer>
+        <p class="text-box">Created by <a href="https://github.com/Ceneve"> Ceneve</a> in 2024</p>
+        <a href="https://rs.school/courses/javascript-preschool-ru"><img class="logo" src="./assets/img/rss-logo.svg"
+                alt="logo"></a>
+    </footer>
 </body>
 
 </html>
