feat: add footer

--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -10,5 +10,11 @@
 </head>
 <body>
     
+    <footer>
+        <p class="text-box">Created by <a href="https://github.com/Ceneve"> Ceneve</a> in 2024</p>
+        <a href="https://rs.school/courses/javascript-preschool-ru">
+            <img class="logo" src="./assets/img/rss-logo.svg"alt="logo">
+        </a>
+    </footer>
 </body>
 </html>
