--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -9,7 +9,12 @@
     <script defer src="index.js"></script>
 </head>
 <body>
-    
+    <header>
+        <input type="search" id="image-search">
+    </header>
+    <div class="content">
+      
+    </div>
     <footer>
         <p class="text-box">Created by <a href="https://github.com/Ceneve"> Ceneve</a> in 2024</p>
         <a href="https://rs.school/courses/javascript-preschool-ru">
