feat: add search bar

--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +9,21 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="index.js"></script>
 </head>
+
 <body>
     <header>
-        <input type="search" id="image-search">
+        <input type="search" id="image-search" placeholder="Search" autocomplete="off">
+        <button id="search">Search</button>
     </header>
     <div class="content">
-      
+
     </div>
-    <footer>
+    <footer class="footer">
         <p class="text-box">Created by <a href="https://github.com/Ceneve"> Ceneve</a> in 2024</p>
         <a href="https://rs.school/courses/javascript-preschool-ru">
-            <img class="logo" src="./assets/img/rss-logo.svg"alt="logo">
+            <img class="logo" src="./assets/img/rss-logo.svg" alt="logo">
         </a>
     </footer>
 </body>
+
 </html>
