--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <input type="search" id="image-search" placeholder="Search" autocomplete="off">
+        <input type="search" id="image-search" placeholder="Search" autocomplete="off" autofocus>
         <button id="search">Search</button>
     </header>
     <div class="content">
