--- a/random-game/index.html
+++ b/random-game/index.html
@@ -11,6 +11,10 @@
 <body>
     <div class="container">
         <div class="main-screen"></div>
+        <p id="score">0</p>
+        <p id="lives">10</p>
+        <button id="start-button">Start</button>
+        <button id="stop-button">Stop</button>
         </div>
     </div>
 </body>
