--- a/random-game/index.html
+++ b/random-game/index.html
@@ -11,10 +11,11 @@
 <body>
     <div class="container">
         <div class="main-screen"></div>
-        <p id="score">0</p>
-        <p id="lives">10</p>
+        <p id ="score">0</p>
         <button id="start-button">Start</button>
         <button id="stop-button">Stop</button>
+        <div class="score-board"></div>
+        <p id="timer">0s</p>
         </div>
     </div>
 </body>
