--- a/random-game/index.html
+++ b/random-game/index.html
@@ -11,12 +11,19 @@
 <body>
     <div class="container">
         <div class="main-screen"></div>
-        <p id ="score">0</p>
-        <button id="start-button">Start</button>
-        <button id="stop-button">Stop</button>
-        <div class="score-board"></div>
-        <p id="timer">0s</p>
+        <div class="button-container">
+            <div id="start-button"><img class="img-button" src='assets/img/start-button.jpg'></div>
+            <div id="stop-button"><img class="img-button"  src='assets/img/stop-button.jpg'></div>
+            <div id="timer">0s</duv>
+            <div class="score" id="score-board"></div>
+        </div>
         </div>
     </div>
+    <footer>
+        <p class="text-box">Created by <a href="https://github.com/Ceneve"> Ceneve</a> in 2024</p>
+        <a href="https://rs.school/courses/javascript-preschool-ru">
+            <img class="logo" src="./assets/img/rss-logo.svg" alt="logo">
+        </a>
+    </footer>
 </body>
 </html>
