feat: fix object display

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -14,8 +14,8 @@
         <div class="button-container">
             <div id="start-button"><img class="img-button" src='assets/img/start-button.jpg'></div>
             <div id="stop-button"><img class="img-button"  src='assets/img/stop-button.jpg'></div>
-            <div id="timer">0s</duv>
-            <div class="score" id="score-board"></div>
+            <p id="timer">0s</p>
+            <div id="score-board"></div>
         </div>
         </div>
     </div>
